<resources>
    <string name="app_name">New Year Tracker</string>
    <string name="noNewYear0">There are no areas of the world</string>
    <string name="noNewYear1">about to enter a New Year.</string>
    <string name="new_year_tracker">New Year Tracker</string>
    <string name="a_bell_will_ring_each_time_there_is">A bell will ring each time there is</string>
    <string name="a_new_year_around_the_world">a New Year around the world.</string>
    <string name="ny14">Next New Year: UTC+14</string>
    <string name="c14">City: Kiritimati, Kiribati</string>
    <string name="ny13_45">Next New Year: UTC+13:45</string>
    <string name="pny14">Previous New Year: UTC+14</string>
    <string name="c13_45">City: Chatham Islands, New Zealand</string>
    <string name="pny13_45">Previous New Year: UTC+13:45</string>
    <string name="ny13">Next New Year: UTC+13</string>
    <string name="c13">City: Wellington, New Zealand</string>
    <string name="pny13">Previous New Year: UTC+13</string>
    <string name="ny12">Next New Year: UTC+12</string>
    <string name="c12">City: Tarawa, Kiribati</string>
    <string name="pny12">Previous New Year: UTC+12</string>
    <string name="ny11">Next New Year: UTC+11</string>
    <string name="c11">City: Sydney, Australia</string>
    <string name="pny11">Previous New Year: UTC+11</string>
    <string name="ny10_30">Next New Year: UTC+10:30</string>
    <string name="c10_30">City: Adelaide, Australia</string>
    <string name="pny10_30">Previous New Year: UTC+10:30</string>
    <string name="ny10">Next New Year: UTC+10</string>
    <string name="c10">City: Brisbane, Australia</string>
    <string name="pny10">Previous New Year: UTC+10</string>
    <string name="ny9_30">Next New Year: UTC+9:30</string>
    <string name="c9_30">City: Alice Springs, Australia</string>
    <string name="pny9_30">Previous New Year: UTC+9:30</string>
    <string name="ny9">Next New Year: UTC+9</string>
    <string name="c9">City: Tokyo, Japan</string>
    <string name="pny9">Previous New Year: UTC+9</string>
    <string name="ny8_45">Next New Year: UTC+8:45</string>
    <string name="c8_45">City: Eucla, Australia</string>
    <string name="pny8_45">Previous New Year: UTC+8:45</string>
    <string name="ny8">Next New Year: UTC+8</string>
    <string name="c8">City: Beijing, China</string>
    <string name="pny8">Previous New Year: UTC+8</string>
    <string name="ny7">Next New Year: UTC+7</string>
    <string name="c7">City: Jakarta, Indonesia</string>
    <string name="pny7">Previous New Year: UTC+7</string>
    <string name="ny6_30">Next New Year: UTC+6:30</string>
    <string name="c6_30">City: Yangon, Myanmar</string>
    <string name="pny6_30">Previous New Year: UTC+6:30</string>
    <string name="ny6">Next New Year: UTC+6</string>
    <string name="c6">City: Dhaka, Bangladesh</string>
    <string name="pny6">Previous New Year: UTC+6</string>
    <string name="ny5_45">Next New Year: UTC+5:45</string>
    <string name="c5_45">City: Kathmandu, Nepal</string>
    <string name="pny5_45">Previous New Year: UTC+5:45</string>
    <string name="ny5_30">Next New Year: UTC+5:30</string>
    <string name="c5_30">City: Mumbai, India</string>
    <string name="pny5_30">Previous New Year: UTC+5:30</string>
    <string name="ny5">Next New Year: UTC+5</string>
    <string name="c5">City: Karachi, Pakistan</string>
    <string name="pny5">Previous New Year: UTC+5</string>
    <string name="ny4_30">Next New Year: UTC+4:30</string>
    <string name="c4_30">City: Kabul, Afghanistan</string>
    <string name="pny4_30">Previous New Year: UTC+4:30</string>
    <string name="ny4">Next New Year: UTC+4</string>
    <string name="c4">City: Dubai, UAE</string>
    <string name="pny4">Previous New Year: UTC+4</string>
    <string name="ny3_30">Next New Year: UTC+3:30</string>
    <string name="c3_30">City: Tehran, Iran</string>
    <string name="pny3_30">Previous New Year: UTC+3:30</string>
    <string name="ny3">Next New Year: UTC+3</string>
    <string name="c3">City: Istanbul, Turkey</string>
    <string name="pny3">Previous New Year: UTC+3</string>
    <string name="ny2">Next New Year: UTC+2</string>
    <string name="c2">City: Cape Town, South Africa</string>
    <string name="pny2">Previous New Year: UTC+2</string>
    <string name="ny1">Next New Year: UTC+1</string>
    <string name="c1">City: Berlin, Germany</string>
    <string name="pny1">Previous New Year: UTC+1</string>
    <string name="ny0">Next New Year: UTC</string>
    <string name="c0">City: London, UK</string>
    <string name="pny0">Previous New Year: UTC</string>
    <string name="nyn1">Next New Year: UTC-1</string>
    <string name="cn1">City: Praia, Cabo Verde</string>
    <string name="pnyn1">Previous New Year: UTC-1</string>
    <string name="nyn2">Next New Year: UTC-2</string>
    <string name="cn2">City: Fernando de Noronha, Brazil</string>
    <string name="pnyn2">Previous New Year: UTC-2</string>
    <string name="nyn3">Next New Year: UTC-3</string>
    <string name="cn3">City: Rio de Janeiro, Brazil</string>
    <string name="pnyn3">Previous New Year: UTC-3</string>
    <string name="nyn3_30">Next New Year: UTC-3:30</string>
    <string name="cn3_30">City: St. John\'s, Canada</string>
    <string name="pnyn3_30">Previous New Year: UTC-3:30</string>
    <string name="nyn4">Next New Year: UTC-4</string>
    <string name="cn4">City: Bridgetown, Barbados</string>
    <string name="pnyn4">Previous New Year: UTC-4</string>
    <string name="nyn5">Next New Year: UTC-5</string>
    <string name="cn5">City: Miami, USA</string>
    <string name="pnyn5">Previous New Year: UTC-5</string>
    <string name="nyn6">Next New Year: UTC-6</string>
    <string name="cn6">City: Mexico City, Mexico</string>
    <string name="pnyn6">Previous New Year: UTC-6</string>
    <string name="nyn7">Next New Year: UTC-7</string>
    <string name="cn7">City: Denver, USA</string>
    <string name="pnyn7">Previous New Year: UTC-7</string>
    <string name="nyn8">Next New Year: UTC-8</string>
    <string name="cn8">City: Los Angeles, USA</string>
    <string name="pnyn8">Previous New Year: UTC-8</string>
    <string name="nyn9">Next New Year: UTC-9</string>
    <string name="cn9">City: Anchorage, USA</string>
    <string name="pnyn9">Previous New Year: UTC-9</string>
    <string name="nyn9_30">Next New Year: UTC-9:30</string>
    <string name="cn9_30">City: Taiohae, France</string>
    <string name="pnyn9_30">Previous New Year: UTC-9:30</string>
    <string name="nyn10">Next New Year: UTC-10</string>
    <string name="cn10">City: Honolulu, USA</string>
    <string name="pnyn10">Previous New Year: UTC-10</string>
    <string name="nyn11">Next New Year: UTC-11</string>
    <string name="cn11">City: Pago Pago, USA</string>
    <string name="pnyn11">Previous New Year: UTC-11</string>
    <string name="nyn12">Next New Year: UTC-12</string>
    <string name="cn12">City: Baker Island, USA</string>
    <string name="pnyn12">Previous New Year: UTC-12</string>
    <string name="taiohae_is_in_french_polynesia">Taiohae is in French Polynesia,</string>
    <string name="an_overseas_collectivity_of_france">an Overseas Collectivity of France.</string>
    <string name="pago_pago_is_in_american_samoa">Pago Pago is in American Samoa,</string>
    <string name="a_territory_of_the_us">a territory of the US.</string>
    <string name="baker_island_is_in_us_minor">Baker Island is in US Minor</string>
    <string name="outlying_islands_a_us_territory">Outlying islands, a US territory.</string>
    <string name="blank" />
    <string name="menu">Menu</string>
    <string name="new_years_tracker">New Year Tracker</string>
    <string name="settings">Settings</string>
    <string name="credits">Credits</string>
    <string name="help">Help</string>
    <string name="menu_button0">Menu Button0</string>
    <string name="bell_sound">Bell Sound: Bell foundry - first trial of the bell - Sounds of Changes, Sweden - CC BY.
https://www.europeana.eu/en/item/916107/wws_object_960</string>
    <string name="data_credits">Information for Time Zone offsets and usage to calculate New Year\'s from: timeanddate.com </string>
    <string name="menu_credits">Menu vector from Android Vector Studio under Apache 2.0 License: https://www.apache.org/licenses/LICENSE-2.0.txt </string>
    <string name="app_image_credits">App Image: By Gerald G - [1], CC0, https://commons.wikimedia.org/w/index.php?curid=8853628</string>
    <string name="notification_image_credits">Notification Image: By Gerald G - [1], CC0, https://commons.wikimedia.org/w/index.php?curid=8853711</string>
    <string name="menu_button1">MenuButton1</string>
    <string name="menu_button2">MenuButton2</string>
</resources>